add-ons/gitlab/gitlab-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    name: gitlab
spec:
  selector:
    name: gitlab
  type: NodePort
  ports:
    - name: ssh
      port: 22
      targetPort: 22
      nodePort: 30022
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30086
